Force showing scrollbar to fix progress bar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,10 @@ html, body {
   padding: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .ProgressBar {
   position: absolute;
   top: 0;
